--- a/index.html
+++ b/index.html
@@ -36,98 +36,153 @@
             </a>
         </div>
         <div class="content">
-            <div class="column">
-                <h1 data-lang="news_channels">Информационные телеканалы</h1>
-                <h2 data-lang="in_russian">На русском</h2>
+            <h1 data-lang="main_channels">Основные телеканалы</h1>
+                <h2 data-lang="international">Международные</h2>
+                <div class="column">
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=rt" class="tvplate" id="rt"><img src="cdn/rt.svg"></a>
+                            <a href="watch.html?v=cnn" class="tvplate" id="cnn"><img src="cdn/cnn.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=fox" class="tvplate" id="fox"><img src="cdn/fox.svg"></a>
+                            <a href="watch.html?v=bbc" class="tvplate" id="bbc"><img src="cdn/bbc.svg"></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=eu" class="tvplate" id="eu"><img src="cdn/eu.svg"></a>
+                            <a href="watch.html?v=alj" class="tvplate" id="alj"><img src="cdn/alj.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=fr24" class="tvplate" id="fr24"><img src="cdn/fr24.svg"></a>
+                            <a href="watch.html?v=cgtn" class="tvplate" id="cgtn"><img src="cdn/cgtn.svg"></a>
+                        </div>
+                    </div>
+                </div>
+                <h2 data-lang="russia">Россия</h2>
                 <div class="column">
                     <div class="row">
                         <div class="row2">
                             <a href="watch.html?v=ntv" class="tvplate" id="ntv"><img src="cdn/ntv.svg"></a>
-                            <a href="watch.html?v=rtvi" class="tvplate" id="rtvi"><img src="cdn/rtvi.svg"></a>
-                        </div>
-                        <div class="row2">
                             <a href="watch.html?v=m24" class="tvplate" id="m24"><img src="cdn/m24.svg"></a>
-                            <a href="watch.html?v=spb6" class="tvplate" id="spb6"><img src="cdn/6.svg"></a>
                         </div>
                         <div class="row2">
+                            <a href="watch.html?v=spb6" class="tvplate" id="spb6"><img src="cdn/6.svg"></a>
+                            <a href="watch.html?v=tvrain" class="tvplate geoban" id="tvrain"><img src="cdn/tvrain.svg"></a>
+                        </div>
+                    </div>
+                </div>
+                <h2 data-lang="cis">СНГ</h2>
+                <div class="column">
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=bel1" class="tvplate" id="bel1"><img src="cdn/bel1.svg"></a>
+                            <a href="watch.html?v=bel2" class="tvplate" id="bel2"><img src="cdn/bel2.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=bel24" class="tvplate" id="bel24"><img src="cdn/bel24.svg"></a>
                             <a href="watch.html?v=ont" class="tvplate" id="ont"><img src="cdn/ont.svg" style="width: 100%;"></a>
+                        </div>
+                        <div class="row2">
                             <a href="watch.html?v=stv" class="tvplate" id="stv"><img src="cdn/stv.svg" style="width: 70%;"></a>
+                            <a href="watch.html?v=belsat" class="tvplate geoban geobanby" id="belsat"><img src="cdn/belsat.svg"></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="row2">
                             <a href="watch.html?v=fd" class="tvplate geoban" id="fd"><img src="cdn/fd.svg" style="width: 80%;"></a>
-                            <a href="watch.html?v=tvr" class="tvplate geoban" id="tvr"><img src="cdn/tvr.svg"></a>
+                            <a href="watch.html?v=1p1" class="tvplate geoban" id="ch1p1"><img src="cdn/1p1.svg"></a>
                         </div>
                         <div class="row2">
-                            <a href="watch.html?v=cgtn" class="tvplate" id="cgtn"><img src="cdn/cgtn.svg"></a>
+                            <a href="watch.html?v=ch24" class="tvplate geoban" id="ch24"><img src="cdn/ch24.svg"></a>
                         </div>
                     </div>
                 </div>
-                <h2 data-lang="other_languages">На других языках</h2>
+                <h2 data-lang="baltic">Балтика</h2>
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=yle" class="tvplate" id="yle"><img src="cdn/yle.svg"></a>
+                            <a href="watch.html?v=yle2" class="tvplate" id="yle2"><img src="cdn/yle2.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=etv" class="tvplate" id="etv"><img src="cdn/etv.svg" style="width: 100%"></a>
+                            <a href="watch.html?v=etv2" class="tvplate" id="etv2"><img src="cdn/etv2.svg" style="width: 50%"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=etvplus" class="tvplate" id="etvplus"><img src="cdn/etvplus.svg"></a>
+                            <a href="watch.html?v=lrt" class="tvplate" id="lrt"><img src="cdn/lrt.svg"></a>
+                        </div>
+                    </div>
+                <h2 data-lang="east_europe">Восточная Европа</h2>
+                <div class="column">
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=tvp" class="tvplate" id="tvp"><img src="cdn/tvp.svg"></a>
+                            <a href="watch.html?v=jednotka" class="tvplate" id="jednotka"><img src="cdn/jednotka.svg" style="width:50%"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=duna" class="tvplate" id="duna"><img src="cdn/duna.svg"></a>
+                            <a href="watch.html?v=mold1" class="tvplate" id="mold1"><img src="cdn/mold1.svg"></a>
+                        </div>
+                </div>
+                <h2 data-lang="west_europe">Западная Европа</h2>
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=ard" class="tvplate" id="ard"><img src="cdn/ard.svg"></a>
+                            <a href="watch.html?v=zdf" class="tvplate" id="zdf"><img src="cdn/zdf.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=fr2" class="tvplate" id="fr2"><img src="cdn/fr2.svg"></a>
+                            <a href="watch.html?v=ch4" class="tvplate" id="ch4"><img src="cdn/4.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=orf" class="tvplate" id="orf"><img src="cdn/orf.svg"></a>
+                            <a href="watch.html?v=rtl" class="tvplate" id="rtl"><img src="cdn/rtl.svg"></a>
+                        </div>
+                    </div>
+                <h2 data-lang="south_europe">Южная Европа</h2>
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=la1" class="tvplate" id="la1"><img src="cdn/la1.svg" style="height: 50%;"></a>
+                            <a href="watch.html?v=sic" class="tvplate" id="sic"><img src="cdn/sic.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=rtb" class="tvplate" id="rtb"><img src="cdn/rtb.svg" style="width: 100%;"></a>
+                            <a href="watch.html?v=tvcg1" class="tvplate" id="tvcg1"><img src="cdn/tvcg1.svg" style="height: 50%;"></a>
+                        </div>
+                    </div>
+                <h1 data-lang="other_channels">Другие телеканалы</h1>
+                <h2 data-lang="international">Международные</h2>
                 <div class="row">
                     <div class="row2">
-                        <a href="watch.html?v=bel1" class="tvplate" id="bel1"><img src="cdn/bel1.svg"></a>
-                        <a href="watch.html?v=bel24" class="tvplate" id="bel24"><img src="cdn/bel24.svg"></a>
-                    </div>
-                    <div class="row2">
-                        <a href="watch.html?v=rt" class="tvplate" id="rt"><img src="cdn/rt.svg"></a>
-                        <a href="watch.html?v=cnn" class="tvplate" id="cnn"><img src="cdn/cnn.svg"></a>
-                    </div>
-                    <div class="row2">
-                        <a href="watch.html?v=fox" class="tvplate" id="fox"><img src="cdn/fox.svg"></a>
-                        <a href="watch.html?v=bbc" class="tvplate" id="bbc"><img src="cdn/bbc.svg"></a>
+                        <a href="watch.html?v=mtv" class="tvplate" id="mtv"><img src="cdn/mtv.svg"></a>
+                        <a href="watch.html?v=his" class="tvplate" id="his"><img src="cdn/his.svg"></a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="row2">
-                        <a href="watch.html?v=eu" class="tvplate" id="eu"><img src="cdn/eu.svg"></a>
-                        <a href="watch.html?v=alj" class="tvplate" id="alj"><img src="cdn/alj.svg"></a>
-                    </div>
-                    <div class="row2">
-                        <a href="watch.html?v=ard" class="tvplate" id="ard"><img src="cdn/ard.svg"></a>
-                        <a href="watch.html?v=belsat" class="tvplate geoban geobanby" id="belsat"><img src="cdn/belsat.svg"></a>
-                    </div>
-                    <div class="row2">
-                        <a href="watch.html?v=1p1" class="tvplate geoban" id="ch1p1"><img src="cdn/1p1.svg"></a>
-                        <a href="watch.html?v=ch24" class="tvplate geoban" id="ch24"><img src="cdn/ch24.svg"></a>
-                    </div>
-                </div>
-                <h1 data-lang="entertainment_channels">Развлекательные телеканалы</h1>
-                <h2 data-lang="in_russian">На русском</h2>
+                <h2 data-lang="russia">Россия</h2>
                 <div class="row">
                     <div class="row2">
                         <a href="watch.html?v=tnt" class="tvplate" id="tnt"><img src="cdn/tnt.svg"></a>
                         <a href="watch.html?v=viva" class="tvplate" id="viva"><img src="cdn/viva.svg"></a>
                     </div>
                     <div class="row2">
-                        <a href="watch.html?v=etvplus" class="tvplate" id="etvplus"><img src="cdn/etvplus.svg"></a>
                         <a href="watch.html?v=per" class="tvplate" id="per"><img src="cdn/per.svg" style="height: 10em;"></a>
+                        <a href="watch.html?v=match" class="tvplate" id="match"><img src="cdn/match.svg"></a>
                     </div>
-                    <a href="watch.html?v=match" class="tvplate" id="match"><img src="cdn/match.svg"></a>
                 </div>
-                <h2 data-lang="other_languages">На других языках</h2>
+                <h2 data-lang="cis">СНГ</h2>
                 <div class="row">
                     <div class="row2">
-                        <a href="watch.html?v=bel2" class="tvplate" id="bel2"><img src="cdn/bel2.svg"></a>
-                       <a href="watch.html?v=bel3" class="tvplate" id="bel3"><img src="cdn/bel3.svg"></a>
+                        <a href="watch.html?v=bel3" class="tvplate" id="bel3"><img src="cdn/bel3.svg"></a>
+                        <a href="watch.html?v=bel4" class="tvplate" id="bel4"><img src="cdn/bel4.svg"></a>
                     </div>
                     <div class="row2">
-                        <a href="watch.html?v=bel5" class="tvplate" id="bel5"><img src="cdn/bel5.svg"></a>
+                            <a href="watch.html?v=bel5" class="tvplate" id="bel5"><img src="cdn/bel5.svg"></a>
                         <a href="watch.html?v=2p2" class="tvplate geoban" id="ch2p2"><img src="cdn/2p2.svg"></a>
                     </div>
                     <div class="row2">
                         <a href="watch.html?v=stb" class="tvplate geoban" id="stb"><img src="cdn/stb.svg" style="width: 50%;"></a>
-                        <a href="watch.html?v=mtv" class="tvplate" id="mtv"><img src="cdn/mtv.svg"></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="row2">
-                        <a href="watch.html?v=his" class="tvplate" id="his"><img src="cdn/his.svg"></a>
-                        <a href="watch.html?v=zdf" class="tvplate" id="zdf"><img src="cdn/zdf.svg"></a>
-                    </div>
-                    <div class="row2">
-                        <a href="watch.html?v=ch4" class="tvplate" id="ch4"><img src="cdn/4.svg"></a>
                     </div>
                 </div>
                 <h1 data-lang="regional_channels">Региональные телеканалы</h1>
@@ -190,13 +245,16 @@
                 'description': 'Ether - это бесплатный плеер IPTV. Доступно уже больше 40 каналов. Все трансляции используют официальные источники. Смотрите телевидение? Ether лучше!',
                 'popular': 'Популярное',
                 'moscow24': 'Москва 24',
-                'news_channels': 'Информационные телеканалы',
-                'in_russian': 'На русском',
-                'other_languages': 'На других языках',
-                'entertainment_channels': 'Развлекательные телеканалы',
+                'main_channels': 'Основные телеканалы',
+                'international': 'Международные',
+                'other_channels': 'Другие телеканалы',
                 'regional_channels': 'Региональные телеканалы',
                 'russia': 'Россия',
                 'cis': 'СНГ',
+                'baltic': 'Балтика',
+                'east_europe': 'Восточная Европа',
+                'west_europe': 'Западная Европа',
+                'south_europe': 'Южная Европа',
                 'about_link': 'О сайте'
             },
             'by': {
@@ -204,13 +262,16 @@
                 'description': 'Ether - гэта бясплатны плэер IPTV. Даступна ўжо больш за 40 каналаў. Усе трансляцыі выкарыстоўваюць афіцыйныя крыніцы. Глядзіце тэлебачанне? Ether лепш!',
                 'popular': 'Папулярнае',
                 'moscow24': 'Масква 24',
-                'news_channels': 'Інфармацыйныя тэлеканалы',
-                'in_russian': 'На рускай мове',
-                'other_languages': 'На іншых мовах',
-                'entertainment_channels': 'Забаўляльныя тэлеканалы',
+                'main_channels': 'Асноўныя тэлеканалы',
+                'international': 'Міжнародныя',
+                'other_channels': 'Іншыя каналы',
                 'regional_channels': 'Рэгіянальныя тэлеканалы',
                 'russia': 'Расія',
                 'cis': 'СНД',
+                'baltic': 'Балтыка',
+                'east_europe': 'Усходняя Еўропа',
+                'west_europe': 'Заходняя Еўропа',
+                'south_europe': 'Паўднёвая Еўропа',
                 'about_link': "Пра сайт"
             },
             'uk': {
@@ -218,13 +279,16 @@
                 'description': 'Ether - це безкоштовний плеєр IPTV. Доступно вже понад 40 каналів. Всі трансляції використовують офіційні джерела. Дивитесь телебачення? Ether краще!',
                 'popular': 'Популярне',
                 'moscow24': 'Москва 24',
-                'news_channels': 'Інформаційні телеканали',
-                'in_russian': 'Російською мовою',
-                'other_languages': 'Іншими мовами',
-                'entertainment_channels': 'Розважальні телеканали',
+                'main_channels': 'Основні телеканали',
+                'other_languages': 'Міжнародні',
+                'other_channels': 'Інші канали',
                 'regional_channels': 'Регіональні телеканали',
                 'russia': 'Росія',
                 'cis': 'СНД',
+                'baltic': 'Балтика',
+                'east_europe': 'Східна Європа',
+                'west_europe': 'Західна Європа',
+                'south_europe': 'Південна Європа',
                 'about_link': "Про сайт",
             },
             'en': {
@@ -232,13 +296,16 @@
                 'description': 'Ether is a free IPTV player. Already more than 40 channels available. All broadcasts use official sources. Watch TV? Better watch Ether!',
                 'popular': 'Popular',
                 'moscow24': 'Moscow 24',
-                'news_channels': 'News channels',
-                'in_russian': 'In Russian',
-                'other_languages': 'In other languages',
-                'entertainment_channels': 'Entertainment channels',
+                'main_channels': 'Main channels',
+                'international': 'International',
+                'other_channels': 'Other channels',
                 'regional_channels': 'Regional channels',
                 'russia': 'Russia',
                 'cis': 'CIS',
+                'baltic': 'Baltic',
+                'east_europe': 'East Europe',
+                'west_europe': 'Western Europe',
+                'south_europe': 'South Europe',
                 'about_link': "About",
             }
         };
