--- a/watch.html
+++ b/watch.html
@@ -195,7 +195,7 @@
                 'etv2': { player: 'https://live.err.ee/live/etv2.m3u8' },
                 'etvplus': { player: 'https://live.err.ee/live/etvpluss.m3u8' },
                 'lrt': { player: 'https://stream-syncwords.lrt.lt/out/v1/channel-group-lrt-portal-prod-01/channel-lrt-portal-prod-01/endpoint-lrt-portal-prod-01/index.m3u8' },
-                'tvp': { player: 'https://ec06-krk3.cache.orange.pl/dai4/org1/vb/104/tvp1hd/index.m3u8' },
+                'tvp': { player: 'https://liveovh009.cda.pl/enc129/tvp1hdraw/tvp1hdraw.m3u8' },
                 'jednotka': { player: 'https://n13.stv.livebox.sk/stv-tv/_definst_/stv1.smil/playlist.m3u8?auth=b64:X2FueV98MTc1Nzk0ODM2OHwyMDRiYTkxNDJjOWEyZGEzMWYyZWJiMGFmZjUxNTRkZTZjOGUyNDZl' },
                 'duna': { player: 'https://viamotionhsi.netplus.ch/live/eds/duna/browser-HLS8/duna.m3u8' },
                 'mold1': { player: 'https://v0.trm.md/static/streaming-playlists/hls/9b79338b-1870-4cd7-91d4-0f6ce5cac7ca/master.m3u8' },
