--- a/watch.html
+++ b/watch.html
@@ -172,12 +172,12 @@
                 'bel24': { player: 'https://ngtrk.dc.beltelecom.by/ngtrk/smil:belarus24/playlist.m3u8' },
                 'fr24': { player: 'https://live.france24.com/hls/live/2037218-b/fr24_EN_HI_HLS/master_5000.m3u8' },
                 'cgtn': { player: 'https://amg00405-rakutentv-cgtn-rakuten-i9tar.amagi.tv/master.m3u8' },
-                'orf': { player: 'https://livetvde.net/orf1y/index.m3u8?token=7d8f14cf021f358cbef8286d3015661414a1a7cc-09d65716e867e9611969578af49252a9-1757955455-1757944655' },
+                'orf': { player: 'https://strm.hdtvizlecanli.com/live/orf1.m3u8' },
                 'rtl': { player: 'https://live-edge.rtl.lu/channel1/smil:channel1/playlist.m3u8' },
                 'la1': { player: 'https://ztnr.rtve.es/ztnr/1688877.m3u8' },
                 'sic': { player: 'https://d1zx6l1dn8vaj5.cloudfront.net/out/v1/b89cc37caa6d418eb423cf092a2ef970/index.m3u8' },
                 'rtb': { player: 'https://rt-srb.rttv.com/dvr/rtbalkan/playlist.m3u8' },
-                'tvcg': { player: 'http://cdn3.bcdn.rs:1935/cg1/smil:cg1.smil/playlist.m3u8' },
+                'tvcg1': { player: 'http://cdn3.bcdn.rs:1935/cg1/smil:cg1.smil/playlist.m3u8' },
                 'rt': { player: 'https://rumble.com/live-hls-dvr/33aw1a/playlist.m3u8' },
                 'cnn': { player: 'https://raw.githubusercontent.com/CODERX24/tv/refs/heads/master/CNN.m3u8' },
                 'fox': { player: 'https://stream.livenewsplay.com:9443/hls/foxnews/foxsd.m3u8' },
@@ -201,7 +201,7 @@
                 'mold1': { player: 'https://v0.trm.md/static/streaming-playlists/hls/9b79338b-1870-4cd7-91d4-0f6ce5cac7ca/master.m3u8' },
                 'ard': { player: 'https://viamotionhsi.netplus.ch/live/eds/daserstehd/browser-HLS8/daserstehd.m3u8' },
                 'zdf': { player: 'https://zdf-hls-15.akamaized.net/hls/live/2016498/de/high/master.m3u8' },
-                'fr2': { player: 'http://69.64.57.208/france2/mono.m3u8' },
+                'fr2': { player: 'https://viamotionhsi.netplus.ch/live/eds/france2hd/browser-HLS8/france2hd.m3u8' },
                 'per': { player: 'https://cdn4.skygo.mn/live/disk1/Che/HLSv3-FTA/Che.m3u8' },
                 '2p2': { player: 'https://s.tvua.biz/-761CKQAh70ua58Pz5FSww/238/1757968012/index.m3u8' },
                 'stb': { player: 'https://s.tvua.biz/aBHPk42Pu9ybxyANI8SC0w/101/1757968040/index.m3u8' },
@@ -1036,7 +1036,7 @@
                         "description": "France 2 is the main public television channel in France, part of the France Télévisions group. It offers a wide range of programs, including news, current affairs, entertainment shows, movies, and TV series."
                     }
                 },
-                "orf1": {
+                "orf": {
                     "ru": {
                         "title": "ORF 1",
                         "description": "ORF 1 — первый общественный телеканал Австрии. Он ориентирован на молодую аудиторию и транслирует в основном развлекательные программы, фильмы, сериалы и спортивные события. Все новостные выпуски были перенесены на ORF 2."
@@ -1108,7 +1108,7 @@
                         "description": "SIC is the first private television channel in Portugal, and for many years, it has been one of the most-watched channels. It offers talk shows, game shows, Brazilian telenovelas, and international TV series."
                     }
                 },
-                "rt_balkan": {
+                "rtb": {
                     "ru": {
                         "title": "RT Balkan",
                         "description": "RT Balkan — информационный телеканал, вещающий на сербском языке. Он является частью международной сети RT. Канал транслирует новости, аналитические программы, интервью и документальные фильмы, представляя мировые и региональные события с российской точки зрения. Студия телеканала находится в Белграде."
