--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="box">
         <div class="sidebar sleft">
             <span class="sh sleft" data-lang="popular">Популярное</span>
-            <a href="watch.html?v=rtvi" class="sbut sleft">
-                <img class="sbuticon" src="cdn/rtvi.svg">
-                <span>RTVI</span>
+            <a href="watch.html?v=eu" class="sbut sleft">
+                <img class="sbuticon" src="cdn/eu.svg">
+                <span>Euronews</span>
             </a>
             <a href="watch.html?v=m24" class="sbut sleft">
                 <img class="sbuticon" src="cdn/m24w.svg">
@@ -167,13 +167,10 @@
                 <div class="row">
                     <div class="row2">
                         <a href="watch.html?v=bel3" class="tvplate" id="bel3"><img src="cdn/bel3.svg"></a>
-                        <a href="watch.html?v=bel4" class="tvplate" id="bel4"><img src="cdn/bel4.svg"></a>
+                        <a href="watch.html?v=bel5" class="tvplate" id="bel5"><img src="cdn/bel5.svg"></a>
                     </div>
                     <div class="row2">
-                            <a href="watch.html?v=bel5" class="tvplate" id="bel5"><img src="cdn/bel5.svg"></a>
                         <a href="watch.html?v=2p2" class="tvplate geoban" id="ch2p2"><img src="cdn/2p2.svg"></a>
-                    </div>
-                    <div class="row2">
                         <a href="watch.html?v=stb" class="tvplate geoban" id="stb"><img src="cdn/stb.svg" style="width: 50%;"></a>
                     </div>
                 </div>
@@ -214,6 +211,60 @@
                         </div>
                     </div>
                 </div>
+                <h2 data-lang="poland">Польша</h2>
+                <div class="column">
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=tvp3b" class="tvplate" id="tvp3"><img src="cdn/tvp3b.svg"></a>
+                            <a href="watch.html?v=tvp3by" class="tvplate" id="tvp3"><img src="cdn/tvp3by.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=tvp3g" class="tvplate" id="tvp3"><img src="cdn/tvp3g.svg"></a>
+                            <a href="watch.html?v=tvp3go" class="tvplate" id="tvp3"><img src="cdn/tvp3go.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=tvp3k" class="tvplate" id="tvp3"><img src="cdn/tvp3k.svg"></a>
+                            <a href="watch.html?v=tvp3ki" class="tvplate" id="tvp3"><img src="cdn/tvp3ki.svg"></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=tvp3kr" class="tvplate" id="tvp3"><img src="cdn/tvp3kr.svg"></a>
+                            <a href="watch.html?v=tvp3l" class="tvplate" id="tvp3"><img src="cdn/tvp3l.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=tvp3lu" class="tvplate" id="tvp3"><img src="cdn/tvp3lu.svg"></a>
+                            <a href="watch.html?v=tvp3o" class="tvplate" id="tvp3"><img src="cdn/tvp3o.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=tvp3op" class="tvplate" id="tvp3"><img src="cdn/tvp3op.svg"></a>
+                            <a href="watch.html?v=tvp3p" class="tvplate" id="tvp3"><img src="cdn/tvp3p.svg"></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=tvp3r" class="tvplate" id="tvp3"><img src="cdn/tvp3r.svg"></a>
+                            <a href="watch.html?v=tvp3sz" class="tvplate" id="tvp3"><img src="cdn/tvp3sz.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=tvp3war" class="tvplate" id="tvp3"><img src="cdn/tvp3war.svg"></a>
+                            <a href="watch.html?v=tvp3wro" class="tvplate" id="tvp3"><img src="cdn/tvp3wro.svg"></a>
+                        </div>
+                    </div>
+                </div>
+                <h2 data-lang="germany">Германия</h2>
+                <div class="column">
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=wdr" class="tvplate" id="wdr"><img src="cdn/wdr.svg"></a>
+                            <a href="watch.html?v=br" class="tvplate" id="br"><img src="cdn/br.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=rbb" class="tvplate" id="rbb"><img src="cdn/rbb.svg"></a>
+                            <a href="watch.html?v=swr" class="tvplate" id="swr"><img src="cdn/swr.svg"></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -246,6 +297,8 @@
                 'baltic': 'Балтика',
                 'east_europe': 'Восточная Европа',
                 'west_europe': 'Западная Европа',
+                'poland': 'Польша',
+                'germany': 'Германия',
                 'about_link': 'О сайте'
             },
             'by': {
@@ -262,6 +315,8 @@
                 'baltic': 'Балтыка',
                 'east_europe': 'Усходняя Еўропа',
                 'west_europe': 'Заходняя Еўропа',
+                'poland': 'Польшча',
+                'germany': 'Германія',
                 'about_link': "Пра сайт"
             },
             'uk': {
@@ -278,6 +333,8 @@
                 'baltic': 'Балтика',
                 'east_europe': 'Східна Європа',
                 'west_europe': 'Західна Європа',
+                'poland': 'Польща',
+                'germany': 'Німеччина',
                 'about_link': "Про сайт",
             },
             'en': {
@@ -294,6 +351,8 @@
                 'baltic': 'Baltic',
                 'east_europe': 'East Europe',
                 'west_europe': 'Western Europe',
+                'poland': 'Poland',
+                'germany': 'Germany',
                 'about_link': "About",
             }
         };
