--- a/watch.html
+++ b/watch.html
@@ -203,8 +203,8 @@
                 'zdf': { player: 'https://zdf-hls-15.akamaized.net/hls/live/2016498/de/high/master.m3u8' },
                 'fr2': { player: 'https://viamotionhsi.netplus.ch/live/eds/france2hd/browser-HLS8/france2hd.m3u8' },
                 'per': { player: 'https://cdn4.skygo.mn/live/disk1/Che/HLSv3-FTA/Che.m3u8' },
-                '2p2': { player: 'http://141.95.55.143/CH4657/index.m3u8' },
-                'stb': { player: 'http://141.95.55.143/CH4663/index.m3u8' },
+                '2p2': { player: 'https://tmptv.sunduk.tv/CH4657/index.m3u8' },
+                'stb': { player: 'https://tmptv.sunduk.tv/CH4663/index.m3u8' },
                 'mtv': { player: 'https://fl4.moveonjoy.com/MTV_LIVE/index.m3u8' },
                 'his': { player: 'https://fl1.moveonjoy.com/history_channel/index.m3u8' },
                 'ch4': { player: 'https://viamotionhsi.netplus.ch/live/eds/channel4/browser-HLS8/channel4.m3u8' },
