--- a/tv/program.html
+++ b/tv/program.html
@@ -354,6 +354,7 @@ const CHANNELS = {
                     "global business": "../cdn/shows/cgtn/business.png",
                     "world insight": "../cdn/shows/cgtn/insight.png",
                     "the vibe": "../cdn/shows/cgtn/vibe.png",
+                    "the point": "cdn/shows/cgtn/point.png",
                 },
                 ch1: {
                     "время покажет": "../cdn/shows/ch1/vremyapokazhet.png",
