--- a/tv/index.html
+++ b/tv/index.html
@@ -1156,7 +1156,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
             // === Словари картинок для передач (пример для rt) ===
             const SHOW_IMAGES = {
-                  rt: {
+                rt: {
                     "news": "../cdn/shows/rt/news.png",
                     "crosstalk": "../cdn/shows/rt/crosstalk.png",
                     "sanchez effect": "../cdn/shows/rt/sanchez.png",
@@ -1213,6 +1213,7 @@ document.addEventListener("DOMContentLoaded", () => {
                     "global business": "../cdn/shows/cgtn/business.png",
                     "world insight": "../cdn/shows/cgtn/insight.png",
                     "the vibe": "../cdn/shows/cgtn/vibe.png",
+                    "the point": "cdn/shows/cgtn/point.png",
                 },
                 ch1: {
                     "время покажет": "../cdn/shows/ch1/vremyapokazhet.png",
