--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title data-lang="title">Ether - Смотреть телевидение онлайн</title>
-    <meta name="description" data-lang="description" content="Ether - это бесплатный плеер IPTV. Доступно уже больше 40 каналов. Все трансляции используют официальные источники. Смотрите телевидение? Ether лучше!">
+    <meta name="description" data-lang="description" content="Ether - это бесплатный плеер IPTV, а теперь ещё и онлайн-телепрограмма. Доступно уже больше 60 каналов. Все трансляции используют официальные источники. Смотрите телевидение? Ether лучше!">
     <meta property="og:image" content="/media/cover.png">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="media/etherfav.svg">
@@ -34,6 +34,10 @@
     </div>
     <div class="box">
         <div class="sidebar sleft">
+            <a href="tv/index.html" class="sbut sleft">
+                <img class="sbuticon" src="media/list.svg">
+                <span data-lang="tvprogram">Телепрограмма</span>
+            </a>
             <span class="sh sleft" data-lang="popular">Популярное</span>
             <a href="watch.html?v=eu" class="sbut sleft">
                 <img class="sbuticon" src="cdn/eu.svg">
@@ -259,6 +263,7 @@
                 'title': 'Ether - Смотреть телевидение онлайн',
                 'description': 'Ether - это бесплатный плеер IPTV. Доступно уже больше 40 каналов. Все трансляции используют официальные источники. Смотрите телевидение? Ether лучше!',
                 'popular': 'Популярное',
+                'tvprogram': 'Телепрограмма',
                 'moscow24': 'Москва 24',
                 'main_channels': 'Основные телеканалы',
                 'international': 'Международные',
@@ -277,6 +282,7 @@
                 'title': 'Ether - Глядзець тэлебачанне онлайн',
                 'description': 'Ether - гэта бясплатны плэер IPTV. Даступна ўжо больш за 40 каналаў. Усе трансляцыі выкарыстоўваюць афіцыйныя крыніцы. Глядзіце тэлебачанне? Ether лепш!',
                 'popular': 'Папулярнае',
+                'tvprogram': 'Тэлепраграма',
                 'moscow24': 'Масква 24',
                 'main_channels': 'Асноўныя тэлеканалы',
                 'international': 'Міжнародныя',
@@ -295,6 +301,7 @@
                 'title': 'Ether - Дивитися телебачення онлайн',
                 'description': 'Ether - це безкоштовний плеєр IPTV. Доступно вже понад 40 каналів. Всі трансляції використовують офіційні джерела. Дивитесь телебачення? Ether краще!',
                 'popular': 'Популярне',
+                'tvprogram': 'Телепрограма',
                 'moscow24': 'Москва 24',
                 'main_channels': 'Основні телеканали',
                 'other_languages': 'Міжнародні',
@@ -313,6 +320,7 @@
                 'title': 'Ether - Watch TV online',
                 'description': 'Ether is a free IPTV player. Already more than 40 channels available. All broadcasts use official sources. Watch TV? Better watch Ether!',
                 'popular': 'Popular',
+                'tvprogram': 'TV Program',
                 'moscow24': 'Moscow 24',
                 'main_channels': 'Main channels',
                 'international': 'International',
