--- a/tv/show.html
+++ b/tv/show.html
@@ -54,7 +54,7 @@
         </div>
         <div class="content">
             <h1 class="row3"><div class="prlogo" id=""><img id="logo" src="../cdn/"></div><span id="show" style="text-transform: uppercase;"></span></h1>
-            <img src="../media/cover.png" id="cover" style="width: 50%;">
+            <img src="../media/cover.png" id="cover">
             <div id="timeentries">
                 
             </div>
